--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
      <!-- <a href=""></a>  a is a tag for the link-->
     <header>
         <div class="container">
-            <a href="#" class="logo">
+            <a href="#" class="logo">Alhamwi
                 <img src="./images/logo (1).png" alt="Logo">
             </a>
             <nav>
